--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+/Testing_and_development/JAXMBIR_testing.ipynb
+/Testing_and_development/Results_Data
+/Testing_and_development/Display.py
