--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,5 @@ dmypy.json
 /Testing_and_development/Wind_Tunnel_Overlap.gif
 /Testing_and_development/Results_Data
 /Testing_and_development/Display.py
+
+/Testing_and_development/JAXMBIR_testing.ipynb
